; ModuleID = '/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-engine.c_flush_conn.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-engine.c_flush_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conn_target = type { %struct.connection* }
%struct.connection = type { %struct.connection* }
%struct.TYPE_2__ = type { i32 (%struct.connection*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flush_conn(%struct.conn_target* %0) #0 {
  %2 = alloca %struct.conn_target*, align 8
  %3 = alloca %struct.connection*, align 8
  store %struct.conn_target* %0, %struct.conn_target** %2, align 8
  %4 = load %struct.conn_target*, %struct.conn_target** %2, align 8
  %5 = icmp ne %struct.conn_target* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %27

7:                                                ; preds = %1
  %8 = load %struct.conn_target*, %struct.conn_target** %2, align 8
  %9 = getelementptr inbounds %struct.conn_target, %struct.conn_target* %8, i32 0, i32 0
  %10 = load %struct.connection*, %struct.connection** %9, align 8
  store %struct.connection* %10, %struct.connection** %3, align 8
  br label %11

11:                                               ; preds = %23, %7
  %12 = load %struct.connection*, %struct.connection** %3, align 8
  %13 = load %struct.conn_target*, %struct.conn_target** %2, align 8
  %14 = bitcast %struct.conn_target* %13 to %struct.connection*
  %15 = icmp ne %struct.connection* %12, %14
  br i1 %15, label %16, label %27

16:                                               ; preds = %11
  %17 = load %struct.connection*, %struct.connection** %3, align 8
  %18 = call %struct.TYPE_2__* @MCC_FUNC(%struct.connection* %17)
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %19, align 8
  %21 = load %struct.connection*, %struct.connection** %3, align 8
  %22 = call i32 %20(%struct.connection* %21)
  br label %23

23:                                               ; preds = %16
  %24 = load %struct.connection*, %struct.connection** %3, align 8
  %25 = getelementptr inbounds %struct.connection, %struct.connection* %24, i32 0, i32 0
  %26 = load %struct.connection*, %struct.connection** %25, align 8
  store %struct.connection* %26, %struct.connection** %3, align 8
  br label %11

27:                                               ; preds = %6, %11
  ret void
}

declare dso_local %struct.TYPE_2__* @MCC_FUNC(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
